finish test 1 front

--- a/index.html
+++ b/index.html
@@ -6,14 +6,69 @@
 	<title>Job Application HTML Tests — ooptimo</title>
 	<link rel="stylesheet" href="css/main.css">
 	<meta name="description" content="">
-
 	<link rel="icon" href="/favicon.ico" sizes="any">
 	<link rel="icon" href="/icon.png" type="image/png">
 	<link rel="apple-touch-icon" href="icon.png">
-
 	<meta name="theme-color" content="#202F66">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-	<p>Job Application HTML Tests — ooptimo</p>
+	<main>
+		<header>
+			<div class="logo">ooptimo.</div>
+		</header>
+		<section class="titulo">
+			<h1 class="encabezado">
+				Creiem en una <span class="texto-verde">era digital</span>, on el
+				<br>
+				consum tradicional i l'online es
+				<br>
+				fusionen
+			</h1>
+			<p class="parrafo">Connectant les companyies amb els seus
+				<br> clients com mai abans ho havien fet.
+			</p>
+			<button class="btn-contactar">Contactar</button>
+		</section>
+	</main>
+	<footer>
+		<div class="contenedor">
+			<div >
+				<img src="src/img/logoOoptimo.png" alt="Descripción de la imagen">
+			</div>
+			<div>
+				<label class="label">Contacte</label>
+				<div class="info">Carrer Sant elias n°2935 <br>
+					08006 Barcelona <br>
+					Espanya <br>
+				</div>
+			</div>
+			<div>
+				<label class="label">Legal</label>
+				<div class="info">
+					<a href="#" target="_blank">Política de Privacidad</a> <br>
+					<a href="#" target="_blank">Política de Cookies</a> <br>
+					<a href="#" target="_blank">Aviso Legal</a> <br>
+				</div>
+			</div>
+			<div>
+				<label class="label">Segueix-nos</label>
+				<div class="info redes">
+					<a href="#">
+						<img width="25" src="src/img/icons/Facebook.png" alt="Facebook.png">
+					</a>
+					<a href="#">
+						<img width="25" src="src/img/icons/Instagram.png" alt="Instagram.png">
+					</a>
+					<a href="#">
+						<img width="25" src="src/img/icons/YouTube.png" alt="YouTube.png">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="logo-footer">
+			<img src="src/img/logoBlanco.png" alt="">
+		</div>
+	</footer>
 </body>
 </html>
